# multi_kinect

./: .travis.yml  README.md
multi_kinect_description/: CMakeLists.txt  package.xml
multi_kinect_description/launch/: multi_kinectv2_rviz.launch
multi_kinect_description/robots/: multi_kinectv2.urdf.xacro
multi_kinect_description/test/: multi_kinectv2_rviz_launch_test.xml
multi_kinect_description/urdf/sensor/: kinect.gazebo.xacro
multi_kinect_downsampler/: CMakeLists.txt  package.xml
multi_kinect_downsampler/launch/: kinect_downsampler.launch  kinect_downsampler_merged.launch
multi_kinect_downsampler/src/: kinect_downsampler.cpp
multi_kinect_euclidean_cluster/: CMakeLists.txt  package.xml
multi_kinect_euclidean_cluster/include/: euclidean_cluster.hpp
multi_kinect_euclidean_cluster/launch/: euclidean_cluster.launch  kinect_downsampler.launch
multi_kinect_euclidean_cluster/src/: euclidean_cluster.cpp
multi_kinect_gazebo/: CMakeLists.txt  package.xml
multi_kinect_gazebo/launch/: multi_kinectv2_gazebo.launch
multi_kinect_gazebo/test/: multi_kinectv2_gazebo_launch_test.xml
multi_kinect_merger/: CMakeLists.txt  package.xml
multi_kinect_merger/launch/: multi_kinect_merger.launch  two_kinect_merger.launch
multi_kinect_merger/launch/rviz/: multi_kinect.rviz  two_kinect.rviz
multi_kinect_merger/src/: point_cloud_merger.cpp
two_kinect_description/: CMakeLists.txt  package.xml
two_kinect_description/launch/: multi_kinectv2.launch  sia5_with_jamming_and_kinectv2.launch
two_kinect_description/launch/rviz/: multi_kinect.rviz
two_kinect_description/robots/: multi_kinectv2.urdf.xacro
two_kinect_description/urdf/sensor/: kinect.gazebo.xacro  kinect.urdf.xacro
two_kinect_gazebo/: CMakeLists.txt  package.xml
two_kinect_gazebo/launch/: multi_kinectv2.launch
two_kinect_merge/: CMakeLists.txt  package.xml
two_kinect_merge/launch/: two_kinect_rviz.launch
two_kinect_merge/src/: point_cloud_merger.cpp
