<?xml version="1.0"?>
<package>
  <name>multi_kinect_gazebo</name>
  <version>0.1.0</version>
  <description>The multi_kinect_gazebo package</description>

  <license>BSD</license>
  <url type="repository">http://github.com/ry0/multi_kinect</url>
  <maintainer email="ry0@todo.todo">ry0</maintainer>

  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>ros_control</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>robot_state_publisher</run_depend>
</package>
